--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="latitude: "
+        android:text="Current latitude: "
         android:textSize="18sp" />
 
     <TextView
@@ -44,7 +44,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="longitude: "
+        android:text="Current longitude: "
         android:textSize="18sp" />
 
     <TextView
@@ -58,7 +58,21 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider" />
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Number of saved positions: "
+        android:textSize="14sp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/nbSavedPositions"
+        android:textSize="14sp" />
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -66,6 +80,7 @@
         android:textSize="20sp"
         android:padding="20dp"
         />
+
 
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recycleView"
