--- a/app/src/main/res/layout/example_item.xml
+++ b/app/src/main/res/layout/example_item.xml
@@ -7,32 +7,37 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="4dp">
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:padding="2dp"/>
+        android:layout_margin="4dp"
+        >
+
         <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="false"
             android:text="Line1"
-            android:textSize="20sp"
-            android:textStyle="bold"
             android:textColor="@android:color/black"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/imageView"
-            android:id="@+id/textView"/>
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Line2"
-            android:textSize="15sp"
-            android:layout_below="@+id/textView"
-            android:layout_toEndOf="@+id/imageView"
+            android:layout_below="@id/textView"
+            android:layout_alignParentStart="true"
             android:layout_marginStart="8dp"
-             />
+            android:text="Line2"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textView2"
+            android:layout_marginStart="8dp"
+            android:text="Line3"
+            android:textSize="15sp" />
 
 
     </RelativeLayout>
