--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,104 +11,140 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
-    <TextView
-        android:id="@+id/textView4"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Wprowadź Linie:"
-        android:textAlignment="center"
-        android:textSize="18sp" />
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Wprowadź Linie:"
+            android:textAlignment="center"
+            android:textSize="12sp" />
 
-    <EditText
-        android:id="@+id/editTextIdName"
-        android:layout_width="250dp"
+        <EditText
+            android:id="@+id/editTextIdName"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text=""
+            android:textAlignment="center"
+            android:textSize="12sp" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:text=""
-        android:textAlignment="center"/>
-
+        android:orientation="horizontal">
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Wprowadź numer:"
         android:textAlignment="center"
-        android:textSize="18sp"
-        />
+        android:textSize="12sp" />
+
     <EditText
         android:id="@+id/editTextIdIndex"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:text=""
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:textSize="12sp" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <Button
         android:id="@+id/buttonStartLocationUpdates"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/start_location_update"/>
+        android:text="@string/start_location_update"
+        android:textSize="12sp"
+        />
+
     <Button
         android:id="@+id/buttonStopLocationUpdates"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/stop_location_update"/>
+        android:text="@string/stop_location_update"
+        android:textSize="12sp"
+        android:layout_marginLeft="15dp"
+        />
+    </LinearLayout>
+    <Switch
+        android:id="@+id/switch2"
+        android:layout_width="168dp"
+        android:layout_height="wrap_content"
+        android:text="Switch" />
 
     <View
         android:id="@+id/divider2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider" />
-
-    <Switch
-        android:id="@+id/switch2"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Switch" />
-
+        android:orientation="horizontal">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Current latitude: "
-        android:textSize="18sp" />
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/lat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp" />
-
+        android:textSize="12sp" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Current longitude: "
-        android:textSize="18sp" />
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/lon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp" />
-
+        android:textSize="12sp" />
+    </LinearLayout>
     <View
         android:id="@+id/divider3"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/listDivider" />
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
         android:text="Number of saved positions: "
-        android:textSize="14sp" />
+        android:textSize="12sp" />
+
     <TextView
+        android:id="@+id/nbSavedPositions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/nbSavedPositions"
-        android:textSize="14sp" />
+        android:textSize="12sp" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/buttonClear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="101dp"
+        android:layout_height="41dp"
         android:text="Clear" />
 
     <View
@@ -125,13 +161,12 @@
 <!--        />-->
 
 
- <androidx.recyclerview.widget.RecyclerView
-     android:id="@+id/recycleView"
-     android:layout_width="match_parent"
-     android:layout_height="match_parent"
-     android:padding="8dp"
-     android:scrollbars="vertical"
-     android:background="@android:color/darker_gray"
-     />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray"
+        android:padding="8dp"
+        android:scrollbars="vertical" />
 
 </LinearLayout>
